Fix research grid image cards on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -776,6 +776,7 @@
 }
 
 .research-page .research-grid .archive__item-excerpt.research-area-card__media {
+  display: block;
   margin: 0;
   line-height: 0;
 }
